java17/infinispan/tests: needed --add-opens for infinispan